<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterSmoke">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="[회원가입(2/2)]"
        android:gravity="center"
        android:background="#2196F3"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sevenSmoke_underline"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="(예) : 한 갑이면 1, 반 갑이면 0.5로 입력해주세요."
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_avgSmoke"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="right"
            android:hint="예 : 2 "
            android:textSize="24dp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="갑"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startSmoke_underline"
        android:textSize="19dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_startSmoke"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="right"
            android:hint="예 : 2 "
            android:textSize="24dp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="년"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/smokeBank_underline"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="- 이 금액은 추후에 변경할 수 있어요!"
        android:textSize="16dp"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/smoke_bank"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="right"
            android:hint="예 : 50000"
            android:textSize="24dp"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:text="원"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="금연 시작 날짜를 선택해주세요!"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="#2196F3"
        android:text="금주 날짜 선택하기"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="#E6E5E5"
            android:text="취소"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:text="완료 후 시작하기"
            android:textSize="20dp"
            android:textStyle="bold"
            android:backgroundTint="#2196F3"/>
    </LinearLayout>
</LinearLayout>